--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@tailwindcss/vite": "^4.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^7.1.5",
     "tailwindcss": "^4.0.5"
   },
